# livekit-streaming-tts

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: livekit_agent.py  raw_ws_client.py  register_voice.sh  run_server.py
livekit_streaming_tts/: __init__.py  _paths.py  audio.py  base.py  cli.py  normalize.py  plugin.py  registry.py  server.py
livekit_streaming_tts/engines/: __init__.py  bark.py  kitten.py  kokoro.py  omnivoice.py  piper.py  pocket.py  xtts.py
